--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,15 +5,5 @@
   <input id="new-todo" type="text" class="form-control" placeholder="What needs to be done?" aria-label="What needs to be done?" aria-describedby="basic-addon1" autofocus="">
 </div>
 
-<% @tasks.each do %>
-  <div class="row">
-    <div class="col-lg-6">
-      <div class="input-group">
-        <span class="input-group-addon">
-          <input type="checkbox" aria-label="Checkbox for following text input">
-        </span>
-        <input type="text" class="form-control" aria-label="Text input with checkbox">
-      </div>
-    </div>
-  </div>
-<% end -%>
+<div id='todos'>
+</div>
