--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,4 +15,9 @@
 <%= yield %>
 
 </body>
+<footer>
+	<div class="text-right">
+		Find the code under MIT License at <a href="https://github.com/kostopoulos/todo_mvc" target="_blank"> <%= render file: Rails.root.join('app', 'assets', 'images', 'mark-github.svg') %> </a>
+    </div>
+</footer>
 </html>
